<resources>
    <string name="app_name">AlternativeDex</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="numero">N.º____</string>
    <string name="nombrePokemon">NombrePokemon</string>
    <string name="peso">Peso</string>
    <string name="pokedex">N.Pokedex</string>
    <string name="tiposPokemon">Tipo del Pokemon</string>
    <string name="valorDefecto">130</string>
    <string name="textoTipos">Tipos</string>
    <string name="statsPokemon">Pokemon Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spa">SPA</string>
    <string name="spd">SPD</string>
    <string name="spe">SPE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="bienvenido">Bienvenido</string>
    <string name="iniciaSesion">Iniciar sesion</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string name="confirmarContrasena">Confirmar contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="imagen">Foto de perfil</string>
    <string name="TitleHome">Pokedex</string>
    <string name="escribe_mensaje">Escribe un mensaje</string>
    <string name="todos">Todos</string>
    <string name="gen_1">Gen 1</string>
    <string name="gen_2">Gen 2</string>
    <string name="gen_3">Gen 3</string>
    <string name="gen_4">Gen 4</string>
    <string name="gen_5">Gen 5</string>
    <string name="gen_6">Gen 6</string>
    <string name="gen_7">Gen 7</string>
    <string name="gen_9">Gen 9</string>
    <string name="gen_8">Gen 8</string>
    <string name="todo">TODO</string>
    <string name="regional_tournaments">Regional Tournaments</string>
    <string name="menuPokedex">Pokedex</string>
    <string name="torneos">Torneos</string>
    <string name="chat">Chat</string>
    <string name="cuenta">Cuenta</string>
    <string name="event">Evento:</string>
    <string name="location">Localizacion:</string>
    <string name="date">Fecha:</string>
    <string name="formato">Formato:</string>
    <string name="organizador">Organizador:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="elegir_usuario">elegir usuario</string>
</resources>