<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/black"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="-70dp"
        android:scaleType="centerCrop"
        android:translationZ="1000dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="cambiarShiny"
        tools:ignore="UsingOnClickInXml"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="393dp"
        android:layout_height="550dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/rounded_text"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/grey">


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:text="@string/nombrePokemon"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/typeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|start"
                android:orientation="vertical"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/peso"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weightTextnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/valorDefecto"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|end"
                android:orientation="vertical"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/heightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/pokedex"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pokedexTextnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/valorDefecto"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/TiposTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/tiposPokemon"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="80dp"
            android:textStyle="bold"/>

         <TextView
             android:id="@+id/tipoTexto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/textoTipos"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />

        <!--Barras-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PerfomanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/statsPokemon"
            android:textColor="@color/black"
            android:textSize="23sp" />


        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">



            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/hp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/determinateBar1"
                style="@style/MyProgressBar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="300"
                android:progress="100" />

            <TextView
                android:id="@+id/HPstat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/atk"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/determinateBar2"
                style="@style/MyProgressBar2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="300"
                android:progress="100" />

            <TextView
                android:id="@+id/atkstat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"

                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/def"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/determinateBar3"
                style="@style/MyProgressBar3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="300"
                android:progress="100" />

            <TextView
                android:id="@+id/deftat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/spa"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/determinateBar4"
                style="@style/MyProgressBar6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="300"
                android:progress="100" />

            <TextView
                android:id="@+id/spastat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/spd"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/determinateBar5"
                style="@style/MyProgressBar4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="300"
                android:progress="100" />

            <TextView
                android:id="@+id/spdstat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/spe"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/determinateBar6"
                style="@style/MyProgressBar5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="300"
                android:progress="100" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>